app/src/main/jni/libUvc_Support/libuvc_support.h

///////////////// LibUvc ////////////////////////////////

extern int initLibUsb() ;
extern struct uvc_device_info * listDeviceUvc(int fd) ;
extern void probeCommitControlUVC();
extern struct uvc_stream_ctrl probeSetCur_TransferUVC();
extern struct uvc_stream_ctrl probeGetCur_TransferUVC(struct uvc_stream_ctrl ctrl);
extern struct uvc_stream_ctrl CommitSetCur_TransferUVC(struct uvc_stream_ctrl ctrl);
extern struct uvc_stream_ctrl CommitGetCur_TransferUVC(struct uvc_stream_ctrl ctrl);
extern void getOneFrameUVC(struct uvc_stream_ctrl ctrl);
//////////////// Auto Detect Methods ////////////////////
extern void automaticDetection();
struct AutotransferStruct; /* Forward declaration */
typedef struct AutotransferStruct {
    int packetCnt;
    int packet0Cnt;
    int packet12Cnt;
    int packetDataCnt;
    int packetHdr8Ccnt;
    int packetErrorCnt;
    int frameCnt;
    int frameLen;
    int requestCnt;
    int sframeLenArray[5];
} AutotransferStruct;
extern AutotransferStruct get_autotransferStruct();
//////////////// Global Methods ////////////////////

//   Camera Initialization Methods
extern int set_the_native_Values (int FD, int packetsPerReques, int maxPacketSiz, int activeUrb, int camStreamingAltSettin, int camFormatInde,
                 int camFrameInde, int camFrameInterva, int imageWidt, int imageHeigh, int camStreamingEndpointAdress, int camStreamingInterfaceNumber,
                 const char* frameformat, int numberOfAutoFrame, int bcdUVC_int, int lowAndroid);
extern int initStreamingParms(int FD);
extern void stopStreaming();
extern void stopJavaVM();
extern void closeLibUsb();
extern void getFramesOverLibUsb5sec(struct uvc_stream_ctrl ctrl);
extern void getFramesOverLibUVC();
extern void probeCommitControl_cleanup();
      // Callback Methods
typedef int ( *autoStreamComplete)();
extern void setAutoStreamComplete(autoStreamComplete autoStream);
typedef int ( *eventCallbackAuto)(auto_detect_struct_t *auto_values);
extern void setCallbackAuto(eventCallbackAuto evnHnd);
typedef int ( *eventCallback)(void *data, int value);
extern void setCallback(eventCallback evnHnd);
typedef int ( *frameComplete)(int bitmap);
extern void setFrameComplete(frameComplete evnHnd);
// horizontalFlip == 1) horizontalFlip = true;
extern void setRotation(int rot, int horizontalFl, int verticalFl);
extern int fetchTheCamStreamingEndpointAdress (int FD);
extern void setImageCapture();
extern void setImageCaptureLongClick();
extern void startVideoCapture();
extern void stopVideoCapture();
extern void startVideoCaptureLongClick() ;
extern void stopVideoCaptureLongClick() ;
extern unsigned char* convertUYVYtoJPEG (unsigned char* UYVY_frame_array, int* jpgLength, int UYVYframeLength, int imageWidth, int imageHeight);
////////// WebRTC
extern void prepairTheStream_WebRtc_Service();