app/src/main/jni/libuvc/include/libuvc/libuvc.h

typedef enum uvc_error {
	/** Success (no error) */
	UVC_SUCCESS = 0,
	/** Input/output error */
	UVC_ERROR_IO = -1,
	/** Invalid parameter */
	UVC_ERROR_INVALID_PARAM = -2,
	/** Access denied */
	UVC_ERROR_ACCESS = -3,
	/** No such device */
	UVC_ERROR_NO_DEVICE = -4,
	/** Entity not found */
	UVC_ERROR_NOT_FOUND = -5,
	/** Resource busy */
	UVC_ERROR_BUSY = -6,
	/** Operation timed out */
	UVC_ERROR_TIMEOUT = -7,
	/** Overflow */
	UVC_ERROR_OVERFLOW = -8,
	/** Pipe error */
	UVC_ERROR_PIPE = -9,
	/** System call interrupted */
	UVC_ERROR_INTERRUPTED = -10,
	/** Insufficient memory */
	UVC_ERROR_NO_MEM = -11,
	/** Operation not supported */
	UVC_ERROR_NOT_SUPPORTED = -12,
	/** Device is not UVC-compliant */
	UVC_ERROR_INVALID_DEVICE = -50,
	/** Mode not supported */
	UVC_ERROR_INVALID_MODE = -51,
	/** Resource has a callback (can't use polling and async) */
	UVC_ERROR_CALLBACK_EXISTS = -52,
	/** Undefined error */
	UVC_ERROR_OTHER = -99
} uvc_error_t;
/** VideoStreaming interface descriptor subtype (A.6) */
enum uvc_vs_desc_subtype {
  UVC_VS_UNDEFINED = 0x00,
  UVC_VS_INPUT_HEADER = 0x01,
  UVC_VS_OUTPUT_HEADER = 0x02,
  UVC_VS_STILL_IMAGE_FRAME = 0x03,
  UVC_VS_FORMAT_UNCOMPRESSED = 0x04,
  UVC_VS_FRAME_UNCOMPRESSED = 0x05,
  UVC_VS_FORMAT_MJPEG = 0x06,
  UVC_VS_FRAME_MJPEG = 0x07,
  UVC_VS_FORMAT_MPEG2TS = 0x0a,
  UVC_VS_FORMAT_DV = 0x0c,
  UVC_VS_COLORFORMAT = 0x0d,
  UVC_VS_FORMAT_FRAME_BASED = 0x10,
  UVC_VS_FRAME_FRAME_BASED = 0x11,
  UVC_VS_FORMAT_STREAM_BASED = 0x12
};
/** Input terminal type (B.2) */
enum uvc_it_type {
	UVC_ITT_VENDOR_SPECIFIC = 0x0200,
	UVC_ITT_CAMERA = 0x0201,
	UVC_ITT_MEDIA_TRANSPORT_INPUT = 0x0202
};
/** Output terminal type (B.3) */
enum uvc_ot_type {
	UVC_OTT_VENDOR_SPECIFIC = 0x0300,
	UVC_OTT_DISPLAY = 0x0301,
	UVC_OTT_MEDIA_TRANSPORT_OUTPUT = 0x0302
};
/** Context, equivalent to libusb's contexts.
 *
 * May either own a libusb context or use one that's already made.
 *
 * Always create these with uvc_get_context.
 */
struct uvc_context;
/** UVC device.
 *
 * Get this from uvc_get_device_list() or uvc_find_device().
 */
struct uvc_device;
/** Handle on an open UVC device.
 *
 * Get one of these from uvc_open(). Once you uvc_close()
 * it, it's no longer valid.
 */
struct uvc_device_handle;
typedef struct uvc_stream_handle uvc_stream_handle_t;
enum uvc_status_class {
	UVC_STATUS_CLASS_CONTROL = 0x10,
	UVC_STATUS_CLASS_CONTROL_CAMERA = 0x11,
	UVC_STATUS_CLASS_CONTROL_PROCESSING = 0x12,
};
enum uvc_status_attribute {
	UVC_STATUS_ATTRIBUTE_VALUE_CHANGE = 0x00,
	UVC_STATUS_ATTRIBUTE_INFO_CHANGE = 0x01,
	UVC_STATUS_ATTRIBUTE_FAILURE_CHANGE = 0x02,
	UVC_STATUS_ATTRIBUTE_UNKNOWN = 0xff
};
/** A callback function to accept status updates
 * @ingroup device
 */
typedef void (uvc_status_callback_t)(enum uvc_status_class status_class,
		int event, int selector, enum uvc_status_attribute status_attribute,
		void *data, size_t data_len, void *user_ptr);
/** A callback function to accept button events
 * @ingroup device
 */
typedef void(uvc_button_callback_t)(int button,
                                    int state,
                                    void *user_ptr);
/** An image frame received from the UVC device
 * @ingroup streaming
 */
typedef struct uvc_frame {
	/** Image data for this frame */
	void *data;
	/** Size of image data buffer */
	size_t data_bytes;
	/** XXX Size of actual received data to confirm whether the received bytes is same
	 * as expected on user function when some microframes dropped */
	size_t actual_bytes;
	/** Width of image in pixels */
	uint32_t width;
	/** Height of image in pixels */
	uint32_t height;
	/** Pixel data format */
	enum uvc_frame_format frame_format;
	/** Number of bytes per horizontal line (undefined for compressed format) */
	size_t step;
	/** Frame number (may skip, but is strictly monotonically increasing) */
	uint32_t sequence;
	/** Estimate of system time when the device started capturing the image */
	struct timeval capture_time;
	/** Handle on the device that produced the image.
	 * @warning You must not call any uvc_* functions during a callback. */
	uvc_device_handle_t *source;
	/** Is the data buffer owned by the library?
	 * If 1, the data buffer can be arbitrarily reallocated by frame conversion
	 * functions.
	 * If 0, the data buffer will not be reallocated or freed by the library.
	 * Set this field to zero if you are supplying the buffer.
	 */
	uint8_t library_owns_data;
} uvc_frame_t;
/** A callback function to handle incoming assembled UVC frames
 * @ingroup streaming
 */
typedef void(uvc_frame_callback_t)(struct uvc_frame *frame, void *user_ptr);
/** Streaming mode, includes all information needed to select stream
 * @ingroup streaming
 */
typedef struct uvc_stream_ctrl {
	uint16_t bmHint;
	uint8_t bFormatIndex;
	uint8_t bFrameIndex;
	uint32_t dwFrameInterval;
	uint16_t wKeyFrameRate;
	uint16_t wPFrameRate;
	uint16_t wCompQuality;
	uint16_t wCompWindowSize;
	uint16_t wDelay;
	uint32_t dwMaxVideoFrameSize;
	uint32_t dwMaxPayloadTransferSize;
	/** XXX add UVC 1.1 parameters */
	uint32_t dwClockFrequency;
	uint8_t bmFramingInfo;
	uint8_t bPreferedVersion;
	uint8_t bMinVersion;
	uint8_t bMaxVersion;
	/** XXX add UVC 1.5 parameters */
	uint8_t bUsage;
	uint8_t bBitDepthLuma;
	uint8_t bmSettings;
	uint8_t bMaxNumberOfRefFramesPlus1;
	uint16_t bmRateControlModes;
	uint64_t bmLayoutPerStream;
	//
	uint8_t bInterfaceNumber;
} uvc_stream_ctrl_t;
uvc_error_t uvc_stream_ctrl(uvc_stream_handle_t *strmh,
		uvc_stream_ctrl_t *ctrl);